--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ width:50%;
     text-align: center;
     font-size:3rem;
     font-weight:700;
-    color:#f6fffe;
+    color:#031e46;
 }
 .first-project{
     display:flex;
@@ -210,7 +210,7 @@ width:50%;
 }
 .first-project-desc p{
     font-size:1.5rem;
-    color:rgb(7, 148, 173);
+    color:rgb(2, 39, 88);
 }
 .first-project-btn{
     width:9.6rem;
@@ -231,7 +231,7 @@ color:white;
 .contact-me{
     background: rgb(38,69,73);
     background: linear-gradient(90deg, rgba(38,69,73,1) 0%, rgba(11,72,78,1) 50%, rgba(8,19,77,1) 100%);
-padding:6rem;
+/* padding:6rem; */
 }
 .contact-header{
     text-align: center;
